Inmob-Salesforce/force-app/main/default/objects/Contrato__c/Contrato__c.object-meta.xml
<CustomObject>
    <label>Contrato</label>
    <nameField>
        <displayFormat>CT-{0000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>