Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Adicionales__c.field-meta.xml
<CustomField>
    <fullName>Adicionales__c</fullName>
    <formula>Cotizacion__r.Valor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adicionales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>