Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>