Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/CuotaInicial__c.field-meta.xml
<CustomField>
    <fullName>CuotaInicial__c</fullName>
    <formula>Cotizacion__r.CI_Cuota_Inicial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuota Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>