Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <formula>Cotizacion__r.Monto_Descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>