Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/FechaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FechaEntrega__c</fullName>
    <label>Fecha Entrega</label>
    <type>Date</type>
</CustomField>