Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/FormaPago__c.field-meta.xml
<CustomField>
    <fullName>FormaPago__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Formas_de_Pago</valueSetName>
    </valueSet>
</CustomField>