Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Implantacion__c.field-meta.xml
<CustomField>
    <fullName>Implantacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implantación</label>
    <referenceTo>Implantacion__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>