Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/InstitucionFinanciera__c.field-meta.xml
<CustomField>
    <fullName>InstitucionFinanciera__c</fullName>
    <label>Institución Financiera</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000000000005</fullName>
                <label>BANCO PRODUBANCO</label>
            </value>
            <value>
                <fullName>0000000000250</fullName>
                <label>I.E.S.S.</label>
            </value>
            <value>
                <fullName>0000000011115</fullName>
                <label>BANCO PROAMERICA</label>
            </value>
            <value>
                <fullName>0190055965001</fullName>
                <label>BANCO DEL AUSTRO</label>
            </value>
            <value>
                <fullName>0790002350001</fullName>
                <label>BANCO DE MACHALA</label>
            </value>
            <value>
                <fullName>0990005737001</fullName>
                <label>BANCO DEL PACIFICO</label>
            </value>
            <value>
                <fullName>0990029105001</fullName>
                <label>BANCO TERRITORIAL</label>
            </value>
            <value>
                <fullName>0990048673001</fullName>
                <label>BANCO DELBANK S.A.</label>
            </value>
            <value>
                <fullName>0990049459001</fullName>
                <label>BANCO DE GUAYAQUIL</label>
            </value>
            <value>
                <fullName>0990141516172</fullName>
                <label>BANCO DEL PICHINCHA</label>
            </value>
            <value>
                <fullName>0990579017007</fullName>
                <label>BANCO BOLIVARIANO C.A.</label>
            </value>
            <value>
                <fullName>1760002600001</fullName>
                <label>BANCO CENTRAL DEL ECUADOR</label>
            </value>
            <value>
                <fullName>1760002790021</fullName>
                <label>BANCO NACIONAL DE FOMENTO</label>
            </value>
            <value>
                <fullName>1768022190001</fullName>
                <label>ISSFA</label>
            </value>
            <value>
                <fullName>1790010937001</fullName>
                <label>BANCO DEL PICHINCHA S.A.</label>
            </value>
            <value>
                <fullName>1790022186005</fullName>
                <label>BANCO AMAZONAS</label>
            </value>
            <value>
                <fullName>1790075494001</fullName>
                <label>MUTUALISTA PICHINCHA</label>
            </value>
            <value>
                <fullName>1790098354001</fullName>
                <label>BANCO INTERNACIONAL S.A.</label>
            </value>
            <value>
                <fullName>1790477142001</fullName>
                <label>BANCO M.M. JARAMILLO ARTEAGA S.A.</label>
            </value>
            <value>
                <fullName>1790864316001</fullName>
                <label>BANCO RUMIÑAHUI</label>
            </value>
            <value>
                <fullName>1790864316002</fullName>
                <label>BANCO RUMIÐAHUI</label>
            </value>
            <value>
                <fullName>1791109384001</fullName>
                <label>BANCO SOLIDARIO</label>
            </value>
            <value>
                <fullName>1791369378001</fullName>
                <label>CORPORACION DE DESARROLLO DE MERCADO SECUNDARIO DE HIPOTECAS</label>
            </value>
            <value>
                <fullName>1791423526001</fullName>
                <label>BANCO INTERNACIONAL</label>
            </value>
            <value>
                <fullName>9999999999999</fullName>
                <label>I S S  F A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>