Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote</label>
    <referenceTo>Lote__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>