Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manzana</label>
    <referenceTo>Manzana__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>