Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/OficialCobranza__c.field-meta.xml
<CustomField>
    <fullName>OficialCobranza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficial Cobranza</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos1</relationshipName>
    <type>Lookup</type>
</CustomField>