Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/OficialCredito__c.field-meta.xml
<CustomField>
    <fullName>OficialCredito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficial Crédito</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>