Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/PrecioCotizado__c.field-meta.xml
<CustomField>
    <fullName>PrecioCotizado__c</fullName>
    <formula>Cotizacion__r.Valor_Contrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio cotizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>