Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/PrecioLista__c.field-meta.xml
<CustomField>
    <fullName>PrecioLista__c</fullName>
    <formula>Cotizacion__r.Precio_Lista__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>