Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/Urbanizacion__c.field-meta.xml
<CustomField>
    <fullName>Urbanizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Urbanización</label>
    <referenceTo>Urbanizacion__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>