Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/ValorEntrada__c.field-meta.xml
<CustomField>
    <fullName>ValorEntrada__c</fullName>
    <formula>Cotizacion__r.Valor_de_Entrada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>