Inmob-Salesforce/force-app/main/default/objects/Contrato__c/fields/ValorSaldo__c.field-meta.xml
<CustomField>
    <fullName>ValorSaldo__c</fullName>
    <formula>Cotizacion__r.Valor_Saldo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>